tests/ui/parser/recover/recover-where-clause-before-tuple-struct-body-0.stderr
error: attributes cannot be applied to a type
  --> $DIR/recover-where-clause-before-tuple-struct-body-0.rs:7:2
   |
LL | (#[allow(dead_code)] usize);
   |  ^^^^^^^^^^^^^^^^^^^ attributes are not allowed here

error: where clauses are not allowed before tuple struct bodies
  --> $DIR/recover-where-clause-before-tuple-struct-body-0.rs:5:1
   |
LL |   pub struct Example
   |              ------- while parsing this tuple struct
LL | / where
LL | |     (): Sized,
   | |______________^ unexpected where clause
LL |   (#[allow(dead_code)] usize);
   |   --------------------------- the struct body
   |
help: move the body before the where clause
   |
LL ~ pub struct Example(#[allow(dead_code)] usize)
LL | where
LL ~     (): Sized;
   |

error: where clauses are not allowed before tuple struct bodies
  --> $DIR/recover-where-clause-before-tuple-struct-body-0.rs:12:1
   |
LL |   struct _Demo
   |          ----- while parsing this tuple struct
LL | / where
LL | |     (): Sized,
LL | |     String: Clone,
   | |__________________^ unexpected where clause
LL |   (pub usize, usize);
   |   ------------------ the struct body
   |
help: move the body before the where clause
   |
LL ~ struct _Demo(pub usize, usize)
LL | where
LL |     (): Sized,
LL ~     String: Clone;
   |

error: aborting due to 3 previous errors

